<resources>
    <string name="app_name">司南电影</string>
    <string name="setting">设 置</string>
    <string name="error_message">An error has occurred. Please try again by clicking REFRESH</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>


    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">系统同步设置</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="sorting_way">排序方式</string>
    <string name="sorting_by_popular">欢迎程度</string>
    <string name="sorting_by_rated">评分高低</string>
    <string name="vote_average">用户评分</string>
    <string name="vote_count_unit">人</string>
    <string name="detail">详细信息</string>
    <string name="refresh_tip">请下拉刷新数据</string>
    <string name="overview_title">简介</string>
    <string name="label_trailer_tip">电影预告片: </string>
    <string name="label_release_date">上映日期: </string>
    <string name="label_genre">类型: </string>
    <string name="label_runtime">片长: </string>
    <string name="label_runtime_unit">分钟</string>
    <string name="tv_review">影评</string>
    <string name="open_review_content">展开</string>
    <string name="close_review_content">收起</string>
    <string name="favourite">收藏</string>
    <string name="cancel_favourite">取消收藏</string>
    <string name="favourite_add_tip">已加入收藏</string>
    <string name="favourite_cancel_tip">已取消收藏</string>
    <string name="menu_title_movies">电影</string>
    <string name="menu_title_favourite">收藏</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="main_activity_name_popular">热度榜</string>
    <string name="main_activity_name_rate">评分榜</string>
    <string name="loading_more_tip">上拉加载更多</string>
    <string name="loading_more">正在加载...</string>

    <!-- Sync Adapter -->
    <string name="account_type" translatable="false">evolvexie.com</string>
    <string name="account_name" translatable="false">dummyaccount</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sync_frequency">同步频率</string>
    <string name="general_title">常用</string>
    <string name="other_title">其它</string>
    <string name="title_activity_preference_settings">Settings</string>

    <string name="sorting_way_popular" translatable="false">popular</string>
    <string name="sorting_way_rated" translatable="false">rated</string>
    <string name="pref_key_sorting_way" translatable="false">sorting_way_setting</string>
    <string-array name="pref_sorting_way_titles">
        <item>@string/sorting_by_popular</item>
        <item>@string/sorting_by_rated</item>
    </string-array>
    <string-array name="pref_sorting_way_values">
        <item>@string/sorting_way_popular</item>
        <item>@string/sorting_way_rated</item>
    </string-array>
    
    <string name="pref_key_sync_frequency" translatable="false">sync_frequency_setting</string>
    <string name="pref_default_sync_frequency" translatable="false">24</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 小时</item>
        <item>3 小时</item>
        <item>6 小时</item>
        <item>9 小时</item>
        <item>12 小时</item>
        <item>24 小时</item>
        <item>48 小时</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>9</item>
        <item>12</item>
        <item>24</item>
        <item>48</item>
    </string-array>

    <!-- 电影列表第一名改变发送通知 -->
    <string name="notification_title_first_change">电影榜</string>
    <string name="notification_content_popular">热度</string>
    <string name="notification_content_rated">评分</string>
    <string name="notification_content_first_change">电影%1$s榜第一名已变更为：%2$s</string>
    <string name="pref_title_notification">通知</string>
    <string name="pref_key_notification" translatable="false">notification_setting</string>
    <string name="pref_text_notification_on">开启</string>
    <string name="pref_text_notification_off">关闭</string>
    <string name="pref_title_last_sync">上次同步时间</string>
    <string name="pref_key_last_sync_time" translatable="false">LAST_TIME_SYNC_KEY</string><!-- 和buildConfig中的保持一致 -->
    <string name="pref_text_last_sync_time">上次同步时间：%1$s</string>
</resources>
