<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/setting_toolbar"
        android:background="@color/colorPrimary"
        android:elevation="4dp">

    </android.support.v7.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="@dimen/text_size_16"
                    android:text="@string/sorting_way"
                    android:textColor="@color/colorSecondary"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/layout_sorting_popular">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="7"
                        android:layout_height="wrap_content"
                        android:text="@string/sorting_by_popular"
                        android:textSize="@dimen/sorting_way_text_size"
                        android:padding="12dp"/>
                    <RadioButton
                        android:id="@+id/rb_popular"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/layout_sorting_rated">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="7"
                        android:layout_height="wrap_content"
                        android:text="@string/sorting_by_rated"
                        android:textSize="@dimen/sorting_way_text_size"
                        android:padding="12dp"/>
                    <RadioButton
                        android:id="@+id/rb_rated"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

            </LinearLayout>
    </FrameLayout>


</FrameLayout>
